--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 									<div class="content">
 										<header>
 											<h1>Hi, Nice to see you...!!!<br />
-											My name is Akash </h1>
+											I am Akash... </h1>
 											<p>Welcome to my portfolio....</p>
 										</header>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+										<p>Being a data enthusiast I get lot of opportunities day by day, where I face lot of challengs in solving daily data problems. Here I will be sharing my knowledge and useful projects which can be useful for students or someone who is aspiring to become a data scientist.</p>
 										<ul class="actions">
 											<li><a href="#" class="button big">Learn More</a></li>
 										</ul>
