--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Design: Akash Verma </p>
+									<p class="copyright">&copy; All rights reserved. Design: Akash Verma </p>
 								</footer>
 
 						</div>
