profile pic  updated

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<a href="index.html" class="logo"></a>
 									<ul class="icons">
-										<li><a href="https://github.com/akash1118" class="icon brands fa-twitter"><span class="label">Github</span></a></li>
+										<li><a href="https://github.com/akash1118" class="icon brands fa-github"><span class="label">Github</span></a></li>
 										<li><a href="https://www.facebook.com/akashlucky18/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 										<li><a href="https://www.instagram.com/theakash_verma/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://medium.com/@akashlucky18" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
+										<li><a href="https://medium.com/@akashlucky18" class="icon brands fa-linkedin"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
 
@@ -35,31 +35,31 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Hi, Nice to see you...!!!<br />
-											I am Akash... </h1>
-											<p>Welcome to my portfolio....</p>
+											<h1>Nice to virtually meet you!<br />
+												I'm Akash </h1>
+											<p>Welcome to My World of Code and AI: A Software Development Portfolio</p>
 										</header>
-										<p>Being a data enthusiast I get lot of opportunities day by day, where I face lot of challengs in solving daily data problems. Here I will be sharing my knowledge and useful projects which can be useful for students or someone who is aspiring to become a data scientist.</p>
+										<p>With a passion for data, every day is an opportunity for me to take on new challenges and solve complex problems. Through this platform, I am excited to share my knowledge and projects, which can be a valuable resource for students and anyone looking to enter the field of data science.</p>
 										<ul class="actions">
-											<li><a href="#" class="button big">Learn More</a></li>
+											<li><a href="https://www.linkedin.com/in/akash-verma-575667135/" class="button big">Learn More</a></li>
 										</ul>
 									</div>
 									<span class="image object">
-										<img src="images/pic10.jpg" alt="" />
+										<img src="images/Profile_Pic.jpg" alt="" style="width: 450px; height: 400px;"/>
 									</span>
 								</section>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Erat lacinia</h2>
+										<h2>MY CAREER JOURNEY</h2>
 									</header>
 									<div class="features">
 										<article>
-											<span class="icon fa-gem"></span>
+											<span class="icon"><i class="fas fa-code fa-2x"></i></span>
 											<div class="content">
-												<h3>Portitor ullamcorper</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<h3>SOFTWARE DEVELOPER [June 2022 - Present]</h3>
+												<p>Game development allowed me to explore my skills and develop a deep understanding of backend language Node.js. With this expertise, I was able to build powerful, scalable mobile and web-based games. Moreover, applying my knowledge of machine learning and data science, I automated business logic and streamlined backend-driven game development.</p>
 											</div>
 										</article>
 										<article>
